# CPPCmakeTemplate

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Apps/: CMakeLists.txt
Apps/MainProject/: CMakeLists.txt
Apps/Project1/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/Modules_1/: CMakeLists.txt  Export.h.in  Modules_1.cpp  Modules_1.h
